--- a/avrcode/Makefile
+++ b/avrcode/Makefile
@@ -1,5 +1,6 @@
 TARGET=oz7fox
 CC?=/usr/bin/avr-gcc
+OBJ2HEX?=/usr/bin/avr-objcopy
 SRC=main.c timer.c key.c
 OBJ=$(SRC:.c=.o)
 #CFLAGS=-g -O2 -Wall -mcall-prologues -mmcu=atmega16
@@ -8,7 +9,6 @@ CFLAGS=-g -O2 -Wall -mcall-prologues -mmcu=atmega32
 #AVRFLAGS= -p m32 -P /dev/ttyUSB0 -c stk500v2 -e -u -U $(TARGET).hex -v -B 10
 #AVRFLAGS= -p m32 -P usb -c avrispmkII -e -u -U $(TARGET).hex -v -B 10
 AVRFLAGS= -p m32 -P usb -c atmelice_isp -e -u -U $(TARGET).hex -v -B 10
-OBJ2HEX=/usr/bin/avr-objcopy 
 UISP=/usr/bin/avrdude 
 
 %.o: %.c
